# glider-data-curation

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: METHODS.md
glidercure/: __init__.py  cli.py  config.py  datacite.py  derived.py  ingest.py  merge.py  metrics.py  mission_map.py  package.py  qc.py  report.py
glidercure/templates/: mission_report.html
scripts/: demo.py
tests/: conftest.py  test_cli.py  test_config.py  test_datacite.py  test_derived.py  test_merge.py  test_metrics.py  test_mission_map.py  test_package.py  test_qc.py  test_report.py
