[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glider-data-curation"
version = "1.0.0"
description = "Slocum glider mission archive pipeline: ingest, merge, QC, and package IOOS DAC trajectory data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ranjith Guggilla", email = "ranjithguggilla668@gmail.com"},
]
keywords = [
    "glider", "Slocum", "IOOS", "oceanography", "trajectory",
    "NetCDF", "CF-conventions", "data-curation", "FAIR",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "gsw>=3.6",
    "folium>=0.14",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "requests>=2.28",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "httpx>=0.24",
]

[project.scripts]
glidercure = "glidercure.cli:main"

[project.urls]
Repository = "https://github.com/ranjithguggilla/glider-data-curation"
Issues = "https://github.com/ranjithguggilla/glider-data-curation/issues"

[tool.setuptools.packages.find]
include = ["glidercure*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
